added delete icon (no impl yet)

--- a/options.html
+++ b/options.html
@@ -56,7 +56,8 @@ limitations under the License.
                     <th width="50%">Hostname</th>
                     <th width="10%">Port</th>
                     <th width="20%">Username</th>
-                    <th width="20%">Password</th>
+                    <th width="10%">Password</th>
+                    <th width="10%">Edit</th>
                 </tr>
             </thead>
             <tbody></tbody>
