added msg display

--- a/main.html
+++ b/main.html
@@ -40,9 +40,9 @@ limitations under the License.
     <div id="headerContent">
         <div id="logo"></div>
 
-        <div id="hostSelectContainer">
-            <select id="hostSelect"></select>
-        </div>
+        <div id="hostSelectContainer"><select id="hostSelect"></select></div>
+
+        <div id="statusMsgContainer"></div>
 
         <div id="options"><a href="options.html">options</a></div>
     </div>
