added port note on add host dialog.

--- a/options.html
+++ b/options.html
@@ -102,6 +102,9 @@ limitations under the License.
 </fieldset>
 </form>
 
+<br />
+<span>The REST API is the Mongo port + 1,000.</span>
+
 </div>
 
 <div id="footer">
