changed container name.

--- a/options.html
+++ b/options.html
@@ -49,7 +49,7 @@ limitations under the License.
         
         <button id="addHost" type="submit">Add Host</button> 
 
-        <div class="demo_jui" style="text-align: left;">
+        <div class="hostsTableContainer" style="text-align: left;">
             <table cellpadding="0" cellspacing="0" border="0" class="display" id="hostsTable" style="text-align: left">
             <thead>
                 <tr>
